Now we can handle SMS EMAIL and TOTP 2FA.#

--- a/src/app/protected/cranix/profile/profile.component.html
+++ b/src/app/protected/cranix/profile/profile.component.html
@@ -1,17 +1,20 @@
 <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="myself">
-        <!-- To Do 29.07.2020: Platform specific icons [ios]="calendar + '-outline'" [md]="calendar + '-sharp'"-->
-        <ion-icon name="calendar"></ion-icon>
+        <ion-icon name="person"></ion-icon>
         <ion-label>{{ 'mySelf' | translate }}</ion-label>
       </ion-tab-button>
-      <ion-tab-button tab="mydevice">
+      <ion-tab-button *ngIf="authService.isAllowed('permitall')" tab="mydevice">
         <ion-icon name="desktop" ></ion-icon>
         <ion-label>{{ 'myDevice' | translate }}</ion-label>
       </ion-tab-button>
       <ion-tab-button *ngIf="vpn" tab="myVPN" >
         <ion-icon name="security" ></ion-icon>
         <ion-label>{{ 'VPN' | translate }}</ion-label>
+      </ion-tab-button>
+      <ion-tab-button *ngIf="authService.isAllowed('2fa.use')" tab="crx2fa" >
+        <ion-icon name="key" ></ion-icon>
+        <ion-label>{{ 'CRX2fa' | translate }}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
