--- a/src/theme/cranix-custom.scss
+++ b/src/theme/cranix-custom.scss
@@ -279,6 +279,9 @@ ion-card {
   }
 }
 
+ion-input{
+  --background: lightgrey;
+  }
 
 /*
 * ion-item should inherit background from its container for example ion-row
