--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -10,14 +10,14 @@
           <ion-label style="width: 120px;">
             {{'username'|translate}}
           </ion-label>
-          <ion-input style="background-color: white;" [(ngModel)]="user.username" name="username" type="text"
+          <ion-input [(ngModel)]="user.username" name="username" type="text"
             autocomplete="off" required></ion-input>
         </ion-item>
         <ion-item>
           <ion-label style="width: 120px;">
             {{'password'|translate}}
           </ion-label>
-          <ion-input style="background-color: white;" [(ngModel)]="user.password" name="password"
+          <ion-input [(ngModel)]="user.password" name="password"
             [type]="showPassword ? 'text' : 'password'" autocomplete="off" required></ion-input>
           <ion-icon slot="end" [name]="showPassword ? 'eye-off' : 'eye'"
             (click)="showPassword = !showPassword"></ion-icon>
@@ -31,7 +31,7 @@
     <ion-card-content *ngIf="authService.use2fa">
       <ion-list>
         <ion-item *ngIf="authService.session.crx2fas.length > 1">
-          <ion-select [(ngModel)]="authService.crx2fa">
+          <ion-select [(ngModel)]="authService.crx2fa" name="selectedCx2fa">
             <ion-select-option *ngFor="let tmp of authService.session.crx2fas"
               [value]="tmp">{{tmp.split('#')[0]}}</ion-select-option>
           </ion-select>
@@ -39,7 +39,9 @@
         <ion-item>
           <ion-label>{{'Enter PIN'|translate}}</ion-label>
           <ion-input [(ngModel)]="totppin" name="totppin" required></ion-input>
-          <ion-button *ngIf="!authService.crx2fa.startsWith('TOTP')" (click)="sendPin()"></ion-button>
+          <ion-button *ngIf="!authService.crx2fa.startsWith('TOTP')" (click)="sendPin()">
+            {{'Send pin'|translate}}
+          </ion-button>
         </ion-item>
         <ion-button style="margin: 10px;" expand="full" color="primary" (click)="checkPin()" [disabled]="!loginForm.valid">{{'login' |
           translate}}</ion-button>
