--- a/src/app/protected/cranix/system/system.page.html
+++ b/src/app/protected/cranix/system/system.page.html
@@ -24,5 +24,10 @@
         <ion-icon name="hammer"></ion-icon>
         <ion-label>{{ 'Addon modules' | translate}}</ion-label>
       </ion-tab-button>
+
+      <ion-tab-button *ngIf="authService.isAllowed('system.mailserver')" tab="mailserver">
+        <ion-icon name="mail"></ion-icon>
+        <ion-label>{{ 'Mailserver' | translate}}</ion-label>
+      </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
