--- a/src/app/protected/cranix/system/mailserver/mailserver.component.html
+++ b/src/app/protected/cranix/system/mailserver/mailserver.component.html
@@ -27,7 +27,7 @@
   <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
     rowSelection="multiple" [rowHeight]="authService.settings.rowHeight"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" [rowData]="allMailAccess"
-    [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [context]="context" (gridReady)="onGridReady($event)"
+    [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" (gridReady)="onGridReady($event)"
     id="agGridTable">
   </ag-grid-angular>
   <ion-modal [isOpen]="isRealyDeleteOpen">
