--- a/src/app/protected/cranix/profile/profile.component.html
+++ b/src/app/protected/cranix/profile/profile.component.html
@@ -1,6 +1,6 @@
 <ion-tabs>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="myself">
+      <ion-tab-button *ngIf="authService.isAllowed('permitall')" tab="myself">
         <ion-icon name="person"></ion-icon>
         <ion-label>{{ 'mySelf' | translate }}</ion-label>
       </ion-tab-button>
@@ -8,7 +8,7 @@
         <ion-icon name="desktop" ></ion-icon>
         <ion-label>{{ 'myDevice' | translate }}</ion-label>
       </ion-tab-button>
-      <ion-tab-button *ngIf="vpn" tab="myVPN" >
+      <ion-tab-button *ngIf="vpn && authService.isAllowed('permitall')" tab="myVPN" >
         <ion-icon name="security" ></ion-icon>
         <ion-label>{{ 'VPN' | translate }}</ion-label>
       </ion-tab-button>
