--- a/src/app/protected/cephalix/tickets/details/edit-article.html
+++ b/src/app/protected/cephalix/tickets/details/edit-article.html
@@ -1,7 +1,7 @@
 <ion-header translucent>
   <ion-toolbar>
     <ion-title>{{ 'Answer:' | translate }} {{ticket.title}}</ion-title>
-    <ion-subtitle>{{article.recDate | date:'yy-MM-dd HH:mm'}} {{article.title}} {{article.sender}}
+    <ion-subtitle>{{article.created | date:'yy-MM-dd HH:mm'}} {{article.title}} {{article.sender}}
     </ion-subtitle>
     <ion-buttons slot="end">
       <ion-button id="add-attachment">
