--- a/src/app/protected/cranix/informations/show-responses-page.html
+++ b/src/app/protected/cranix/informations/show-responses-page.html
@@ -20,7 +20,7 @@
     <ion-list *ngIf="!response">
         <ion-item *ngFor="let r of responses">
             <ion-toolbar>
-                {{ objectService.idToFulName(r.ownerId) }}
+                {{ objectService.idToFulName(r.creatorId) }}
 
                 <ion-buttons slot="end">
                     <ion-button *ngIf="r.rating">
@@ -36,7 +36,7 @@
     <ion-list *ngIf="response">
         <ion-item>
             <ion-label>
-                {{ objectService.idToFulName(response.ownerId) }}
+                {{ objectService.idToFulName(response.creatorId) }}
             </ion-label>
         </ion-item>
         <ion-item>
