Update to ionic v7

--- a/src/app/protected/cranix/system/status/system-status.component.html
+++ b/src/app/protected/cranix/system/status/system-status.component.html
@@ -38,7 +38,7 @@
     </ion-buttons>
   </ion-toolbar>
   <ion-item-divider *ngIf="!authService.isMD()"></ion-item-divider>
-  <ion-grid *ngIf="systemStatus">
+  <ion-grid *ngIf="chartsReady">
     <ion-row>
       <ion-col *ngFor="let key of objectKeys">
         <ion-card>
